full swagger
